@@ -171,7 +171,18 @@ void FieldQueryBuilder::addStringField(const QString& name)
 {
     sql += QLatin1String(" (") + name + QLatin1Char(' ');
     ItemQueryBuilder::addSqlRelation(sql, relation);
-    sql += QLatin1String(" ?) ");
+
+    if (CoreDbAccess::parameters().isSQLite() &&
+        ((relation == SearchXml::Like)        ||
+         (relation == SearchXml::NotLike)))
+    {
+        sql += QLatin1String(" ? ESCAPE '\\') ");
+    }
+    else
+    {
+        sql += QLatin1String(" ?) ");
+    }
+
     *boundValues << prepareForLike(reader.value());
 }
 
